# Bsc-Sign-Language-Recon

./: .gitignore  DataScience_trust.ipynb  README.md  compose.yml  dev.sh  devbox.json  meeting_notes.md  pyproject.toml
.devcontainer/: devcontainer.json
Documents/: meeting_1_notes(30-01-2024).md  overview-application.excalidraw  weekly_meeting.md
backend/: .dockerignore  .~lock.out.csv#  README.md  captions.txt  common_words.csv  devbox.json  err_log_youtube_55p.txt  out.csv  out.csv (link)  pyproject.toml  requirements.txt
backend/data/dynamic_dataset/: landmarks.csv  trajectories.csv
backend/data/model/: M3.joblib  keypoints_from_data_old.csv
backend/dynamic_signs/: best_common_words.csv  best_common_words.txt  common_word_list.py  common_words.csv  common_words.txt  common_words_new.txt  common_words_new_with_numbers.txt  csv_reader.py  landmark_extractor.py  main.py  posinator.py  setup_logging.py  youtube_scraper.py
backend/dynamic_signs/train_scripts/: dynamic_lr.py  dynamic_rf.py  dynamic_svm.py  dynamic_train.py  static_svc.py  train_model.py
backend/model/: DYN_M1.joblib  M6.joblib  dynamic_model.joblib  dynamic_model_svm.joblib  keypoint.csv  model.joblib  softmax_50k_landmarks.joblib  static_model.joblib  svc_alphabet_model.joblib
backend/notebooks/: DynamicModels.ipynb  DynamicModelsVisualisations.ipynb  capturevideo.ipynb
backend/notebooks/train_scripts/: dynamic_lr.py  dynamic_rf.py  dynamic_svm.py
backend/sign/: CONST.py  Pseudotrajectory.md  app.py  data_processing.py  dynamic_classifier.py  dynamic_pipeline.py  keypoint_classifier.py  landmarks.py  main.py  mediapiper.py  model.py  recogniser.py  skewness_algorithm.py  trajectory.py
backend/sign/data/dynamic_train/: optimize_models.py
backend/sign/data/model/: softmax_small.joblib
backend/sign/homemade/: imageloader.py  mediapiper.py  model.py  sussyproc.py
backend/sign/model/alphabet/: train.csv
backend/sign/model/keypoint_classifier/: keypoint_classifier.py
backend/sign/models/keypoint_classifier/: keypoint_classifier.py
backend/sign/recogniser/: recogniser.py
backend/sign/training/: drawer.py  mediapiper.py
backend/sign/training/landmark_extraction/: DynamicPiper.py  HolisticPiper.py  MediaPiper.py  MediapipeTypes.py  sussyproc.py  utils.py
backend/sign/training/load_data/: HolisticCsvReader.py  StaticLandmarkLoader.py  dynamic_loader.py
backend/train_scripts/: dynamic_train.py
dockerfiles/: compose.yml
frontend/: .dockerignore  README.md  devbox.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
notebooks/: DataScience_trust.ipynb  TestPCA.ipynb  (+8 more)
(+28 files in other folders)
