[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Project bsc sign language recognition"
authors = ["p <p@p.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.3"
pandas = "^2.2.0"
tensorflow = "^2.15"
scikit-learn = "^1.4.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
opencv-python = "^4.9.0.80"
mediapipe = "^0.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"