[tool.poetry]
name = "sign"
version = "0.1.0"
description = "Project bsc sign language recognition"
authors = ["p <p@p.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.3"
pandas = "^2.2.0"
tensorflow = "^2.15"
scikit-learn = "^1.4.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
opencv-python = "^4.9.0.80"
mediapipe = "0.10.9"
natsort = "^8.4.0"
ipykernel = "^6.29.3"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "sign.main:dev"
prod = "sign.main:prod"